--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,7 @@
   },
   "tasks": {
     "dev": "deno run -A --unstable --node-modules-dir src/devServer.tsx",
-    "dev2": "deno run -A --unstable --node-modules-dir npm:vite"
+    "build": "deno run -A --unstable --node-modules-dir npm:vite build"
   },
   "importMap": "import_map.json"
 }
